--- a/ftelmap/package.json
+++ b/ftelmap/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^5.18.0",
     "@tanstack/react-query": "^5.85.9",
     "axios": "^1.11.0",
     "react": "^19.1.1",
