--- a/ftelmap/package.json
+++ b/ftelmap/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^5.18.0",
+    "@mui/x-date-pickers": "^8.11.1",
     "@tanstack/react-query": "^5.85.9",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
