--- a/ftelmap/package.json
+++ b/ftelmap/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
@@ -17,6 +20,9 @@
     "@mui/x-date-pickers": "^8.11.1",
     "@tanstack/react-query": "^5.85.9",
     "axios": "^1.11.0",
+    "d3-scale": "^4.0.2",
+    "d3-time": "^3.1.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -26,6 +32,8 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tanstack/react-query-devtools": "^5.85.9",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-time": "^3.0.4",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
