--- a/ftelmap/package.json
+++ b/ftelmap/package.json
@@ -24,16 +24,22 @@
     "d3-time": "^3.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tanstack/react-query-devtools": "^5.85.9",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-time": "^3.0.4",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
